--- a/platforms/ios/www/css/gs.css
+++ b/platforms/ios/www/css/gs.css
@@ -100,6 +100,14 @@
 	margin-top: 20px;
 }
 
+.nitem {
+	background: rgba(194, 194, 194, .1);
+	padding-top: 3px;
+	padding-bottom: 3px;
+	font-size: 16px;
+	color: #ededed;
+}
+
 .list a {
 	text-decoration: none;
 	font-family: bar-font;
