--- a/platforms/ios/www/css/jquery.mobile-1.3.2.css
+++ b/platforms/ios/www/css/jquery.mobile-1.3.2.css
@@ -346,6 +346,7 @@
 	color: 					#ededed /*{c-bup-color}*/;
 	font-family:item-font;
 	background: rgba(194, 194, 194, .1);
+	clear:both;
 }
 .ui-btn-hover-c {
 	color: 					#fff /*{c-bhover-color}*/;
