--- a/platforms/ios/www/css/gs.css
+++ b/platforms/ios/www/css/gs.css
@@ -11,7 +11,6 @@
 .ui-page { 
 	background: #2c2c2c;
 	background-image:url('../img/bg.jpg');
-	-webkit-backface-visibility: hidden;
 }
 
 .gb-name {
@@ -100,14 +99,6 @@
 	margin-top: 20px;
 }
 
-.nitem {
-	background: rgba(194, 194, 194, .1);
-	padding-top: 3px;
-	padding-bottom: 3px;
-	font-size: 16px;
-	color: #ededed;
-}
-
 .list a {
 	text-decoration: none;
 	font-family: bar-font;
@@ -171,4 +162,27 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
+}
+
+.tweet{
+	font-family: bar-font;
+	font-size: 16px;
+	float: left;
+	margin-top: 2px;
+	margin-left: 10px;
+}
+
+.article {
+	padding: 12px;
+}
+
+.tbg{
+	background: rgba(194, 194, 194, .1);
+	margin-bottom: 5px;
+}
+
+.abg{
+	background: rgba(194, 194, 194, .1);
+	margin-bottom: 5px;
+	height: 40px;
 }
