--- a/platforms/ios/www/css/gs.css
+++ b/platforms/ios/www/css/gs.css
@@ -138,6 +138,17 @@
 	color: #157dfb;
 }
 
+.right {
+	font-family: bar-font;
+	font-size: 1.3em;
+	text-decoration: none;
+	height: 34px;
+	color: #157dfb;
+	position: fixed;
+    top: 28px;
+    right: 12px;
+}
+
 .arrow {
 	float: left;
 	background-size: 24px 44px;
@@ -166,10 +177,12 @@
 
 .tweet{
 	font-family: bar-font;
-	font-size: 16px;
-	float: left;
+	font-size: 1.2em;
 	margin-top: 2px;
-	margin-left: 10px;
+	position: relative;
+	word-wrap: break-word;
+	padding-left: 60px;
+	color: #ebebeb;
 }
 
 .article {
@@ -185,4 +198,18 @@
 	background: rgba(194, 194, 194, .1);
 	margin-bottom: 5px;
 	height: 40px;
+}
+
+.ar-bullet{
+	background-image: url(../img/ar.png);
+	background-position: 10px 12px;
+	background-size: 15px;
+	background-repeat: no-repeat;
+}
+
+.vi-bullet{
+	background-image: url(../img/play.png);
+	background-position: 10px 12px;
+	background-size: 15px;
+	background-repeat: no-repeat;
 }
