--- a/platforms/ios/www/css/gs.css
+++ b/platforms/ios/www/css/gs.css
@@ -177,11 +177,27 @@
 .tweet{
 	font-family: bar-font;
 	font-size: 1.2em;
-	margin-top: 2px;
+	margin-top: 5px;
+	padding-bottom: 5px;
 	position: relative;
 	word-wrap: break-word;
 	padding-left: 60px;
 	color: #ebebeb;
+}
+
+.t-img{
+	float: left;
+	margin: 5px;
+}
+
+.user{
+	font-family: bar-font;
+	font-size: 1.2em;
+	margin-top: 2px;
+	position: relative;
+	word-wrap: break-word;
+	padding-left: 60px;
+	color: #12B5EA;
 }
 
 .article {
@@ -190,7 +206,7 @@
 
 .tbg{
 	background: rgba(194, 194, 194, .1);
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 }
 
 .abg{
@@ -211,4 +227,22 @@
 	background-position: 10px 12px;
 	background-size: 15px;
 	background-repeat: no-repeat;
+}
+
+.source{
+	float: left;
+}
+
+.ar-date{
+	float:right;font-size:.8em;color:#c2c2c2;
+}
+
+.t-date{
+	margin-top: -15px;
+	margin-right: 12px;
+    float:right;font-size:.8em;color:#c2c2c2;
+}
+
+.ar-title{
+	margin-top:10px;font-size:.9em;color:#c2c2c2;
 }
