--- a/platforms/ios/www/css/gs.css
+++ b/platforms/ios/www/css/gs.css
@@ -234,7 +234,10 @@
 }
 
 .ar-date{
-	float:right;font-size:.8em;color:#c2c2c2;
+	float:right;
+	font-size:.8em;
+	color:#c2c2c2;
+	margin-right: -25px;
 }
 
 .t-date{
