--- a/platforms/ios/www/css/gs.css
+++ b/platforms/ios/www/css/gs.css
@@ -237,7 +237,8 @@
 	float:right;
 	font-size:.8em;
 	color:#c2c2c2;
-	margin-right: -25px;
+	margin-right: -30px;
+	margin-top: 2px;
 }
 
 .t-date{
