--- a/platforms/ios/www/css/gs.css
+++ b/platforms/ios/www/css/gs.css
@@ -64,6 +64,19 @@
     font-size:.8em;
 }
 
+.hlist {
+	position: absolute;
+    bottom: 25%;
+    width: 80%;
+    list-style-type: none;
+    font-family: bar-font;
+}
+
+.hlist a {
+	text-decoration: none;
+	color: #fff;
+}
+
 .page-title {
 	width:100%;
 	height:80px;
