--- a/platforms/ios/www/css/gs.css
+++ b/platforms/ios/www/css/gs.css
@@ -11,6 +11,8 @@
 .ui-page { 
 	background: #2c2c2c;
 	background-image:url('../img/bg.jpg');
+	-webkit-transform:translate3d(0,0,0);
+	transform:translate3d(0,0,0);
 }
 
 .gb-name {
